--- a/index.html
+++ b/index.html
@@ -38,15 +38,86 @@
     </header>
 
     <section class="features" id="features">
-        <!-- Features section içeriği -->
+        <h2>Özellikler</h2>
+        <div class="feature-grid">
+            <div class="feature-card">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Anonim SMS Bomber</h3>
+                <p>End-to-end şifreleme ile güvenli SMS Gönderme</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-bolt"></i>
+                <h3>Hızlı İletişim</h3>
+                <p>Anlık mesaj gönderimi</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-code"></i>
+                <h3>Python Teknolojisi</h3>
+                <p>%100 Python ile geliştirilmiş altyapı</p>
+            </div>
+        </div>
     </section>
 
     <section class="download" id="download">
-        <!-- Download section içeriği -->
+        <h2>Hemen İndirin</h2>
+        <div class="download-box">
+            <div class="version-info">
+                <p>Son Versiyon: v1.0.0</p>
+                <p>Boyut: 38 MB</p>
+                <p>Python 3.8+ gerektirir</p>
+            </div>
+            <a href="https://dosya.co/79fm20qmqgt8/Zrox_SMS.zip.html" target="_blank" class="btn primary">
+                <i class="fas fa-download"></i> İNDİR
+            </a>
+        </div>
     </section>
 
+    <section class="screenshots" id="screenshots">
+        <h2>Ekran Görüntüleri</h2>
+        <div class="screenshot-grid">
+            <div class="screenshot-item">
+                <img src="static/img/screenshots/screen1.png" 
+                     alt="Zrox SMS Arayüzü"
+                     onclick="openImageModal(this.src)"
+                     loading="lazy">
+                <p>Giriş</p>
+            </div>
+            <div class="screenshot-item">
+                <img src="static/img/screenshots/screen2.png"
+                     alt="SMS Gönderme Ekranı"
+                     onclick="openImageModal(this.src)"
+                     loading="lazy">
+                <p>Karşılama</p>
+            </div>
+            <div class="screenshot-item">
+                <img src="static/img/screenshots/screen3.png"
+                     alt="Menü Ekranı"
+                     onclick="openImageModal(this.src)"
+                     loading="lazy">
+                <p>Menü</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Modal -->
+    <div id="imageModal" class="modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="modalImage">
+    </div>
+
     <section class="contact" id="contact">
-        <!-- Contact section içeriği -->
+        <h2>Abonelik Al</h2>
+        <div class="contact-box">
+            <p>Abonelik satın almak için aşağıdaki platformlardan bize ulaşın:</p>
+            <div class="social-links">
+                <a href="https://discord.com/users/lovnzb08" class="btn discord" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-discord"></i> Discord: lovnzb08
+                </a>
+                <a href="https://t.me/lovnzb08" class="btn telegram" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-telegram"></i> Telegram: lovnzb08
+                </a>
+            </div>
+        </div>
     </section>
 
     <footer>
